--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
+      type="image/png"
       href="public/android-chrome-512x512.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Andrea Vannetti | Web Developer Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio interattivo di Andrea Vannetti, un web developer creativo. Esplora i miei progetti in un'interfaccia stile code editor."
+    />
   </head>
   <body>
     <div id="root"></div>
