tolto pagina skills

--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="public/android-chrome-512x512.png"
-    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Andrea Vannetti | Web Developer Portfolio</title>
+    <title>Andrea Vannetti | Web Developer</title>
     <meta
       name="description"
       content="Portfolio interattivo di Andrea Vannetti, un web developer creativo. Esplora i miei progetti in un'interfaccia stile code editor."
